--- a/TP_PROG II/BackEnd/BackEnd/Properties/Resources.resx
+++ b/TP_PROG II/BackEnd/BackEnd/Properties/Resources.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CadenaConexion" xml:space="preserve">
-    <value />
+    <value>Data Source=MATEO-PC;Initial Catalog=CineProg;Integrated Security=True</value>
   </data>
 </root>
